(February/21/2013)
	/Changed "Forge Required" to its own color for easier at-a-glance identification
	-Removed "Chickenbones Mods" (Replaced with the following 4 mods)
		+Added "Not Enough Items"
		+Added "Ender Storage"
		+Added "Wireless Redstone: Chicken Bones Edition (WR-CBE)"
		+Added "ChickenChunks"
	+Added 4 mods by FatherToast (Which are the following)
		+Added "Dungeon Crawler"
		+Added "Special Mobs"
		+Added "Utility Mobs"
		+Added "Lava Monsters"
	?+Added description to "ChickenShed"
	+Added "[Buildcraft] More Pipes Mod"
	+Added "[BuildCraft] Routing Pipe"
	+Added "EnderStuff+"
	+Added "Fools Gold Mod"
	+Added "Edible Ores Mod"
	+Added "LegendGear"
	+Added "Mine & Blade: Commander"

(February/20/2013)
	-Removed "AtomicStryker's Mods" (Replaced with the following 13 mods)
		+Added "Dynamic Lights"
		+Added "Finder Compass"
		+Added "Minions"
		+Added "Ropes+"
		+Added "BattleTowers"
		+Added "KenshiroMod"
		+Added "Multi Mine"
		+Added "Simply Hax"
		+Added "Magic Yarn"
		+Added "Ruins"
		+Added "Stalker Creepers"
		+Added "Pet Bat"
		+Added "Infernal Mobs"

(February/19/2013)
	-Removed "All Wuppy's Mods" (Replaced with the following 12 mods)
		+Added "The Peacefulpack"
		+Added "Harder Peaceful"
		+Added "Goblins and Giants"
		+Added "Nether Eye"
		+Added "Magical Experience"
		+Added "Jelly Cubes"
		+Added "Koi"
		+Added "Health Packs"
		+Added "Slime Dungeons"
		+Added "Pumpkin-less Snow Golem"
		+Added "Improved Mob Spawns"
		+Added "Simple Recipes"
	-Removed Risugami's Mods (Replaced with the following 13 mods)
		+Added "ModLoader"
		+Added "Light Sensor"
		+Added "Elemental Arrows"
		+Added "More Stackables"
		+Added "Sign Tags"
		+Added "Death Chest"
		+Added "AudioMod"
		+Added "Spawner GUI"
		+Added "Griefer Creepers"
		+Added "Recipe Book"
		+Added "Shelf"
		+Added "Biosphere"
		+Added "Armor Stand"