@@ -1,0 +1,68 @@
+<!doctype html>
+<html>
+
+  <head>
+    <meta charset="utf-8">
+    <title>Mod List - Credits</title>
+	<link rel="stylesheet" type="text/css" href="../resources/stylesheets/modlist.css" media="screen" />	
+	<link rel="stylesheet" type="text/css" href="../resources/stylesheets/nav.css" media="screen" />
+  </head>
+  
+  <body>
+  <center><p><img src="../resources/images/credits.png"/><br/></p>
+	<table class="nav">
+		<tr>
+			<td class="nh"><a href="../index.php">Home</a></td>
+			<td class="nh"><a href="../versions/1.4.6_1.4.7.php">Current List</a></td>
+			<td class="h">Credits</td>
+		</tr>
+	</table><br/>
+		<hr width="80%" size="6" noshade><br/>
+  
+  
+  
+  <table style="width: 75%; border-collapse: collapse; background-color: black; color:white; text-align:center; border:1px solid white" class="credits">
+		<thead>
+			<th>Person</th>
+			<th>Reason</th>
+		</thead>
+	
+		<tbody>		
+		
+			<tr class="citric">
+				<td>citricsquid</td>
+				<td>Founding the Minecraft Forums and kindly offering to host these pages for the mod list!</td>
+			</tr>
+			
+			<tr>
+				<td>catqueen5</td>
+				<td>Creating the original mod list thread on the Minecraft Forums and letting me help her maintain it.</td>
+			</tr>
+			
+			<tr>
+				<td>Vattic</td>
+				<td>Giving me permission to use a copy of his javascript file which enables the search function on the mod list. Vattic is the creator of the <a href="http://www.minecraftforum.net/topic/72747-">Faithful 32x32 Texturepack</a>.</td>
+			</tr>
+			
+			<tr>
+				<td>ZeroLevels (me)</td>
+				<td>For maintaining/improving the mod list thread up until now. Now for maintaining the list on this site.</td>
+			</tr>
+			
+			<tr>
+				<td>All Contributors</td>
+				<td>Obviously, this list would be nothing without all of you who contribute to it, whether it be new entries for the list, suggestions for improvement, or those who show their appreciation, which fuels me to continue maintaining it.</td>
+			</tr>
+			
+			<!--Copy/Paste Purposes
+			
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+			
+			-->
+		</tbody>
+	</table>
+	
+  </body>
