@@ -1,14 +1,20 @@
 body			{text-align:center;
-				background-image:url('../images/mcf_1_3rd.png');}
+				font-family:verdana,arial;
+				background-image:url('../images/mcf_1_3rd.png');
+				margin:0 auto;
+				margin-top:4px}
 			
 p				{color:white;
-				font-size: 18px;}
+				font-size: 18px;
+				padding:3px;}
 				
 p.n				{text-shadow: 1px 1px 10px gray;}
-			
+
 p.select		{background-color:black;}
 
 span.section		{font-size: 36px;
 				font-weight:bold;}
-				
+
 span.selection	{font-size: 24px;}
+
+th,td		{padding:3px;}
